[metadata]
name = panopticon
version = 0.0.1
author = Michael Auchter
author_email = a@phire.org
description = Panopticon. They're always watching, you know.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/auchter/panopticon
project_urls =
    Bug Tracker = https://github.com/auchter/panopticon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    flask
    gevent
    pillow
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    panopticon = panopticon.main:main
